# ChangeLog for x11-libs/qwt
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/qwt/ChangeLog,v 1.36 2006/12/19 21:45:12 caleb Exp $

*qwt-5.0.0_rc1 (19 Dec 2006)

  19 Dec 2006; Caleb Tennis <caleb@gentoo.org> +qwt-5.0.0_rc1.ebuild:
  version bump

  14 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> qwt-4.2.0-r1.ebuild:
  Stable on ia64.

*qwt-5.0.0_rc0 (19 Sep 2006)

  19 Sep 2006; Caleb Tennis <caleb@gentoo.org> +qwt-5.0.0_rc0.ebuild:
  bump to new rc

  21 Jul 2006; Caleb Tennis <caleb@gentoo.org>
  +files/qwt-20060130-buildfix.patch, qwt-5_pre20060130.ebuild:
  adding a patch to fix compilation

  16 Jun 2006; Markus Rothe <corsair@gentoo.org> qwt-4.2.0-r1.ebuild:
  Stable on ppc64

  07 May 2006; Markus Rothe <corsair@gentoo.org> qwt-4.2.0-r1.ebuild,
  qwt-5_pre20060130.ebuild:
  Added ~ppc64

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> qwt-4.2.0-r1.ebuild:
  Mark 4.2.0-r1 ~ia64

*qwt-5_pre20060130 (31 Mar 2006)

  31 Mar 2006; Caleb Tennis <caleb@gentoo.org> +qwt-5_pre20060130.ebuild,
  -qwt-5.20060130.ebuild:
  Re-version from 5.20060130 to 5_pre20060130 from bug #113549

*qwt-5.20060130 (21 Mar 2006)

  21 Mar 2006; Caleb Tennis <caleb@gentoo.org> +qwt-5.20060130.ebuild:
  Adding a SLOTted qwt-5 snapshot that is Qt4 dependent

  18 Jan 2006; Marcus D. Hanwell <cryos@gentoo.org> qwt-4.2.0-r1.ebuild:
  Stable on amd64.

  03 Jan 2006; Caleb Tennis <caleb@gentoo.org> qwt-4.2.0.ebuild,
  qwt-4.2.0-r1.ebuild:
  Fix qt3/qt4 qmake issue

*qwt-4.2.0-r1 (14 Oct 2005)

  14 Oct 2005; Marcus D. Hanwell <cryos@gentoo.org> +qwt-4.2.0-r1.ebuild:
  Fix symlinks on multilib systems.

  24 Aug 2005; Patrick Kursawe <phosphan@gentoo.org> qwt-4.2.0.ebuild:
  No longer using cp -a (bug #103487)

  07 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> qwt-4.2.0.ebuild:
  Stable on ppc.

  07 Jul 2005; Caleb Tennis <caleb@gentoo.org> qwt-4.2.0.ebuild:
  Fix qt dep
