@@ -3,7 +3,7 @@ MD5 843f60baee101a815ce5a40c16d8b994 files/qwt-20060130-buildfix.patch 547
 RMD160 4e7b5b4dd9fb1bd201e2f56231a0d14574cdac8e files/qwt-20060130-buildfix.patch 547
 SHA256 ad34ab929c41da405da3dfd3a41ed885c5dea459bde69b78a8156976b5852f69 files/qwt-20060130-buildfix.patch 547
 DIST qwt-20060130.tar.bz2 944905 RMD160 2f291958451f80eb661eb317e8812b9aa7beeba4 SHA1 c689acade802b194a8153f43b06cb597bd2937b1 SHA256 7e4751c31db6820e166e4013f8fcb80eaf3147c5e7d948a725a997d3db6b1fc7
-DIST qwt-4.2.0.tar.bz2 973643
+DIST qwt-4.2.0.tar.bz2 973643 RMD160 3d0f9ff5201008f3c5f3dc28d5801a3f2b0f30b4 SHA1 469da352b3b79e1b40546d1bde020fb3bd9dd9ee SHA256 726d91ae6bc70049590f9e8e16d5f77f9dc1a7dde18950796703f9c0be9a5a6d
 DIST qwt-5.0.0rc0.tar.bz2 1446915 RMD160 d3c9bd0a93a568995636798406039ba393ba9c50 SHA1 8fad887e5d7cd59dca07d1adad0e315ded181f42 SHA256 e1eb67ceefe27f3fdcc53d55fc4c6416a4a3e123e20beef02dd4280dea6c0ff5
 DIST qwt-5.0.0rc1.tar.bz2 1576317 RMD160 f7ab71654c3013ea69f06f1ee2c6e6f92e643569 SHA1 5675d644dd5b2c554138b356ff825205eb283d53 SHA256 410103615705eaacb9eab576257aa27ebec840f88a3b0ef695a02ec70d167e1e
 EBUILD qwt-4.2.0-r1.ebuild 1587 RMD160 c56c289a3f418cb2805e79098c4c40e3d88a6349 SHA1 7cfd727b9045a746d4a7382895b662da4de895a7 SHA256 d7c560687f3037b972cf8aab11655b4e4ab386acc8b8db5e5b2f90cae7ecc9d0
@@ -14,32 +14,32 @@ EBUILD qwt-4.2.0.ebuild 1533 RMD160 62cd53a36cbb930568c6d9e1c6741d20e360bf8f SHA
 MD5 1b5d784db584bc91665649bd2943f8ee qwt-4.2.0.ebuild 1533
 RMD160 62cd53a36cbb930568c6d9e1c6741d20e360bf8f qwt-4.2.0.ebuild 1533
 SHA256 4bbbcd0734942d24a653bf26bcf5a6831d29c0077af846345756a103aa15855f qwt-4.2.0.ebuild 1533
-EBUILD qwt-5.0.0_rc0.ebuild 1563 RMD160 0b73af6bccbb0e1440f0c112367a19d52bd1a601 SHA1 0882ab9d419523ffa68c9c3f621c0a21b0a206f6 SHA256 dbdcffd6bac9bbcce9309bb9bbc171f3019b363ea414a45085084476b8bed99d
-MD5 1973a8811dc07e1c3b661a986f1f6e7c qwt-5.0.0_rc0.ebuild 1563
-RMD160 0b73af6bccbb0e1440f0c112367a19d52bd1a601 qwt-5.0.0_rc0.ebuild 1563
-SHA256 dbdcffd6bac9bbcce9309bb9bbc171f3019b363ea414a45085084476b8bed99d qwt-5.0.0_rc0.ebuild 1563
-EBUILD qwt-5.0.0_rc1.ebuild 1515 RMD160 9f161e6ce7a97605db24e7d1c32a27946d4dddae SHA1 8f8c06cffeb0a4b3e103e2a0dea95ad112eb23df SHA256 5d836e144f18fa386ca34db295ae05112b614e9a62441f33c04246a9f2fffeeb
-MD5 d44ff9c49d2f2c60e341565e46d15194 qwt-5.0.0_rc1.ebuild 1515
-RMD160 9f161e6ce7a97605db24e7d1c32a27946d4dddae qwt-5.0.0_rc1.ebuild 1515
-SHA256 5d836e144f18fa386ca34db295ae05112b614e9a62441f33c04246a9f2fffeeb qwt-5.0.0_rc1.ebuild 1515
+EBUILD qwt-5.0.0_rc0.ebuild 1572 RMD160 28d893be22d16c7bfc9900c32a94aec2166cfcfa SHA1 033f30bc893ba50e52007928152ea60a9e573a78 SHA256 c8a5d05fd294a749965feefd3469ebaea457137298582db82118797ba0d56278
+MD5 8f8bf5f9e53f47e2e4c06625a4491d58 qwt-5.0.0_rc0.ebuild 1572
+RMD160 28d893be22d16c7bfc9900c32a94aec2166cfcfa qwt-5.0.0_rc0.ebuild 1572
+SHA256 c8a5d05fd294a749965feefd3469ebaea457137298582db82118797ba0d56278 qwt-5.0.0_rc0.ebuild 1572
+EBUILD qwt-5.0.0_rc1.ebuild 1524 RMD160 a4af1ad1cd4366a5b658afcfb9f61b85f91bc057 SHA1 a3c0e0a76e8b16443e6de5836868a7d03da175d0 SHA256 79e20bec2e8c6a0bb2f234f7858bdc8a283d04cbea4d448c23560e2dc0732227
+MD5 220e8820a4c925bdee4347834e696365 qwt-5.0.0_rc1.ebuild 1524
+RMD160 a4af1ad1cd4366a5b658afcfb9f61b85f91bc057 qwt-5.0.0_rc1.ebuild 1524
+SHA256 79e20bec2e8c6a0bb2f234f7858bdc8a283d04cbea4d448c23560e2dc0732227 qwt-5.0.0_rc1.ebuild 1524
 EBUILD qwt-5_pre20060130.ebuild 1570 RMD160 02908af74ddc1ee641fcf9dac6c2301c254cb1cb SHA1 bc72b63e02d2a920272e770d7924ab362f07e960 SHA256 9c8c40b17d026a17b63eee9373f798095710aca6616bf34f42cb740bb2498a11
 MD5 962eccfd1053e9d1d819189582fa3b76 qwt-5_pre20060130.ebuild 1570
 RMD160 02908af74ddc1ee641fcf9dac6c2301c254cb1cb qwt-5_pre20060130.ebuild 1570
 SHA256 9c8c40b17d026a17b63eee9373f798095710aca6616bf34f42cb740bb2498a11 qwt-5_pre20060130.ebuild 1570
-MISC ChangeLog 5321 RMD160 7b30ba63d84686c6c74bceb45b2c3f1b0199e756 SHA1 e30988cfa5c4e84535c26f41115f8ff3dd4e4205 SHA256 eb7d283db67581c706205df8116995a8c206d1da166f20f905c64178656790d0
-MD5 f6eab5fd5921f2f812931a015fd59abc ChangeLog 5321
-RMD160 7b30ba63d84686c6c74bceb45b2c3f1b0199e756 ChangeLog 5321
-SHA256 eb7d283db67581c706205df8116995a8c206d1da166f20f905c64178656790d0 ChangeLog 5321
+MISC ChangeLog 5442 RMD160 57e399f0a63b044f4963dec9fa1e4b0ace126318 SHA1 ef5e267067adc120197fcd1fde70a3620e4c0956 SHA256 00fa893d508d77d80f7ea4524b850ac4f12474a7492a4862b104ad8e5e6fea0f
+MD5 e3a4af95acec438df6912bfa9b1ba850 ChangeLog 5442
+RMD160 57e399f0a63b044f4963dec9fa1e4b0ace126318 ChangeLog 5442
+SHA256 00fa893d508d77d80f7ea4524b850ac4f12474a7492a4862b104ad8e5e6fea0f ChangeLog 5442
 MISC metadata.xml 220 RMD160 a8bb91c9ce72e56f13bb9854dc820b00cd716e16 SHA1 0b034c4ebb144ae10b79490f4f654b711f3b4bbd SHA256 df433ca6c2cedc873eb98291ad018f03e15185d9ce3fee0f01f0bf2f2e1366fa
 MD5 c000c0728c9136f1b54cbc3a5fc07644 metadata.xml 220
 RMD160 a8bb91c9ce72e56f13bb9854dc820b00cd716e16 metadata.xml 220
 SHA256 df433ca6c2cedc873eb98291ad018f03e15185d9ce3fee0f01f0bf2f2e1366fa metadata.xml 220
-MD5 73ff067302f4cd37fba77ed8baeda94b files/digest-qwt-4.2.0 62
-RMD160 f1427c838697584d3dc64cfec3a153315079615b files/digest-qwt-4.2.0 62
-SHA256 0d3aa3c160b7b2477aa3771110584a0840a9e071aefd6f512df11489804278fd files/digest-qwt-4.2.0 62
-MD5 73ff067302f4cd37fba77ed8baeda94b files/digest-qwt-4.2.0-r1 62
-RMD160 f1427c838697584d3dc64cfec3a153315079615b files/digest-qwt-4.2.0-r1 62
-SHA256 0d3aa3c160b7b2477aa3771110584a0840a9e071aefd6f512df11489804278fd files/digest-qwt-4.2.0-r1 62
+MD5 e7331ed08459262654af39ed0d99e166 files/digest-qwt-4.2.0 232
+RMD160 87a08d807ef8ce393a35d70872c521534ce7f4b0 files/digest-qwt-4.2.0 232
+SHA256 19248aa14aec7b22e1e940016dcfdcb6a3d2aac7e25ba201679ec4579d689506 files/digest-qwt-4.2.0 232
+MD5 e7331ed08459262654af39ed0d99e166 files/digest-qwt-4.2.0-r1 232
+RMD160 87a08d807ef8ce393a35d70872c521534ce7f4b0 files/digest-qwt-4.2.0-r1 232
+SHA256 19248aa14aec7b22e1e940016dcfdcb6a3d2aac7e25ba201679ec4579d689506 files/digest-qwt-4.2.0-r1 232
 MD5 c34b278b67fa7cbef1469cc88b7cbd45 files/digest-qwt-5.0.0_rc0 244
 RMD160 e70d359baf2d91b818cf859d903ac5c9d4742327 files/digest-qwt-5.0.0_rc0 244
 SHA256 7d61b9c3a677185c4aa72ef8fc0df0cee4ea752bd15773dabb792b0420d51112 files/digest-qwt-5.0.0_rc0 244
