@@ -1,1 +1,3 @@
 MD5 9c828c9a39a83df5d7fa9630ddf812a4 qwt-4.2.0.tar.bz2 973643
+RMD160 3d0f9ff5201008f3c5f3dc28d5801a3f2b0f30b4 qwt-4.2.0.tar.bz2 973643
+SHA256 726d91ae6bc70049590f9e8e16d5f77f9dc1a7dde18950796703f9c0be9a5a6d qwt-4.2.0.tar.bz2 973643
