@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/qwt/Attic/qwt-5.0.0_rc0.ebuild,v 1.1 2006/09/19 11:49:50 caleb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/qwt/Attic/qwt-5.0.0_rc0.ebuild,v 1.2 2007/01/26 14:40:16 beandog Exp $
 
 inherit multilib eutils
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://sourceforge/qwt/${PN}-${MY_PV}.tar.bz2"
 HOMEPAGE="http://qwt.sourceforge.net/"
 DESCRIPTION="2D plotting library for Qt4"
 LICENSE="qwt"
-KEYWORDS="~ppc64 ~x86"
+KEYWORDS="~amd64 ~ppc64 ~x86"
 SLOT="5"
 IUSE="doc"
 
