@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/qwt
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/qwt/ChangeLog,v 1.36 2006/12/19 21:45:12 caleb Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/qwt/ChangeLog,v 1.37 2007/01/26 14:40:16 beandog Exp $
+
+  26 Jan 2007; Steve Dibb <beandog@gentoo.org> qwt-5.0.0_rc0.ebuild,
+  qwt-5.0.0_rc1.ebuild:
+  add ~amd64, bug 156238
 
 *qwt-5.0.0_rc1 (19 Dec 2006)
 
